# desproxy

./: AUTHORS  Changes  INSTALL  Makefile.in  README.md  config.h.in  configure  configure.in  install-sh
doc/: config-en.html  manual-en.html
src/: Makefile.in  desproxy-dns.c  desproxy-inetd.c  desproxy-socksserver.c  desproxy.c  desproxy.h  socket2socket.c  util.c  util.h
